--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "main.js",
   "scripts": {
     "start": "node main",
-    "dev": "nodemon main"
+    "dev": "nodemon main",
+    "build" : "npm install"
   },
   "author": "",
   "license": "ISC",
