--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "main.js",
   "scripts": {
     "start": "node main",
-    "dev": "nodemon main",
-    "build": "npm install"
+    "dev": "nodemon main"
   },
   "author": "",
   "license": "ISC",
